Remove modal popup because of layout issues

--- a/src/components/modals/Modal/Modal.module.pcss
+++ b/src/components/modals/Modal/Modal.module.pcss
@@ -50,17 +50,6 @@
 	color: var(--color-grey-700);
 }
 
-.popupContainer {
-	background-color: var(--color-grey-25);
-	border-radius: var(--sp-xl);
-	overflow-y: hidden;
-	gap: var(--sp-lg);
-	z-index: 11;
-	max-height: 90vh;
-	max-width: 700px;
-	margin-top: 16px !important;
-}
-
 @media (max-width: 768px) {
 	.container {
 		width: 100%;
